crates/php-parser/tests/snapshots/integration__complex_union_and_intersection_types.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function processData(Countable&ArrayAccess $data): array|null {
    return null;
}
class Container {
    public function __construct(
        public readonly Countable&Iterator $items,
        private string|int|float $value
    ) {}
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "processData",
          "params": [
            {
              "name": "data",
              "type_hint": {
                "kind": {
                  "Intersection": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "Countable"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 27,
                            "end": 36
                          }
                        }
                      },
                      "span": {
                        "start": 27,
                        "end": 36
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "ArrayAccess"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 37,
                            "end": 49
                          }
                        }
                      },
                      "span": {
                        "start": 37,
                        "end": 49
                      }
                    }
                  ]
                },
                "span": {
                  "start": 27,
                  "end": 49
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 27,
                "end": 54
              }
            }
          ],
          "body": [
            {
              "kind": {
                "Return": {
                  "kind": "Null",
                  "span": {
                    "start": 81,
                    "end": 85
                  }
                }
              },
              "span": {
                "start": 74,
                "end": 87
              }
            }
          ],
          "return_type": {
            "kind": {
              "Union": [
                {
                  "kind": {
                    "Named": {
                      "parts": [
                        "array"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 57,
                        "end": 62
                      }
                    }
                  },
                  "span": {
                    "start": 57,
                    "end": 62
                  }
                },
                {
                  "kind": {
                    "Named": {
                      "parts": [
                        "null"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 63,
                        "end": 67
                      }
                    }
                  },
                  "span": {
                    "start": 63,
                    "end": 67
                  }
                }
              ]
            },
            "span": {
              "start": 57,
              "end": 67
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 88
      }
    },
    {
      "kind": {
        "Class": {
          "name": "Container",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "__construct",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [
                    {
                      "name": "items",
                      "type_hint": {
                        "kind": {
                          "Intersection": [
                            {
                              "kind": {
                                "Named": {
                                  "parts": [
                                    "Countable"
                                  ],
                                  "kind": "Unqualified",
                                  "span": {
                                    "start": 164,
                                    "end": 173
                                  }
                                }
                              },
                              "span": {
                                "start": 164,
                                "end": 173
                              }
                            },
                            {
                              "kind": {
                                "Named": {
                                  "parts": [
                                    "Iterator"
                                  ],
                                  "kind": "Unqualified",
                                  "span": {
                                    "start": 174,
                                    "end": 183
                                  }
                                }
                              },
                              "span": {
                                "start": 174,
                                "end": 183
                              }
                            }
                          ]
                        },
                        "span": {
                          "start": 164,
                          "end": 183
                        }
                      },
                      "default": null,
                      "by_ref": false,
                      "variadic": false,
                      "is_readonly": true,
                      "is_final": false,
                      "visibility": "Public",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 148,
                        "end": 189
                      }
                    },
                    {
                      "name": "value",
                      "type_hint": {
                        "kind": {
                          "Union": [
                            {
                              "kind": {
                                "Named": {
                                  "parts": [
                                    "string"
                                  ],
                                  "kind": "Unqualified",
                                  "span": {
                                    "start": 207,
                                    "end": 213
                                  }
                                }
                              },
                              "span": {
                                "start": 207,
                                "end": 213
                              }
                            },
                            {
                              "kind": {
                                "Named": {
                                  "parts": [
                                    "int"
                                  ],
                                  "kind": "Unqualified",
                                  "span": {
                                    "start": 214,
                                    "end": 217
                                  }
                                }
                              },
                              "span": {
                                "start": 214,
                                "end": 217
                              }
                            },
                            {
                              "kind": {
                                "Named": {
                                  "parts": [
                                    "float"
                                  ],
                                  "kind": "Unqualified",
                                  "span": {
                                    "start": 218,
                                    "end": 223
                                  }
                                }
                              },
                              "span": {
                                "start": 218,
                                "end": 223
                              }
                            }
                          ]
                        },
                        "span": {
                          "start": 207,
                          "end": 223
                        }
                      },
                      "default": null,
                      "by_ref": false,
                      "variadic": false,
                      "is_readonly": false,
                      "is_final": false,
                      "visibility": "Private",
                      "set_visibility": null,
                      "attributes": [],
                      "span": {
                        "start": 199,
                        "end": 230
                      }
                    }
                  ],
                  "return_type": null,
                  "body": [],
                  "attributes": []
                }
              },
              "span": {
                "start": 111,
                "end": 240
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 89,
        "end": 241
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 241
  }
}
