crates/php-parser/tests/snapshots/integration__const_declaration.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php const PI = 3.14; const APP_NAME = 'MyApp';
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Const": [
          {
            "name": "PI",
            "value": {
              "kind": {
                "Float": 3.14
              },
              "span": {
                "start": 17,
                "end": 21
              }
            },
            "attributes": [],
            "span": {
              "start": 12,
              "end": 21
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 23
      }
    },
    {
      "kind": {
        "Const": [
          {
            "name": "APP_NAME",
            "value": {
              "kind": {
                "String": "MyApp"
              },
              "span": {
                "start": 40,
                "end": 47
              }
            },
            "attributes": [],
            "span": {
              "start": 29,
              "end": 47
            }
          }
        ]
      },
      "span": {
        "start": 23,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
