crates/php-parser/tests/snapshots/integration__const_without_value.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php const X;

=== errors ===
expected '=', found ';'
expected expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Const": [
          {
            "name": "X",
            "value": {
              "kind": "Error",
              "span": {
                "start": 13,
                "end": 14
              }
            },
            "attributes": [],
            "span": {
              "start": 12,
              "end": 14
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 15
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 15
  }
}
